changed html format

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -19,7 +19,11 @@
     <mat-grid-tile>
 <ngui-map center="{{lat}}, {{lng}}" zoom="{{zoom}}" (mapClick)="mapClicked($event)">
     <div *ngFor="let marker of markers; let i = index" [attr.data-index]="i" > 
-        <marker id="{{i}}" position="{{marker.lat}} , {{marker.lng}}" draggable="true" (click)="clicked(i)" (dragstart)="markerClicked($event, 'dragstart', i)" (dragend)="markerClicked($event, 'dragend', i)" >
+        <marker id="{{i}}" 
+            position="{{marker.lat}} , {{marker.lng}}" 
+            draggable="true" (click)="clicked(i)" 
+            (dragstart)="markerClicked($event, 'dragstart', i)" 
+            (dragend)="markerClicked($event, 'dragend', i)" >
         <!--(positionChanged)="markerClicked($event, 'changed', i)" (cursorChanged)="markerClicked($event, 'changed', i)"-->
         </marker>
           <!--<info-window id="iw">
