--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -7,9 +7,12 @@
 
 
     <mat-grid-tile>
-<ngui-map center="{{lat}}, {{lng}}" zoom="{{zoom}}" (mapClick)="mapClicked($event)">
+<ngui-map center="{{lat}}, {{lng}}" 
+        zoom="{{zoom}}" 
+        (mapClick)="mapClicked($event)"
+        (mapReady$)="onMapReady($event)">
     <div *ngFor="let marker of markers; let i = index" [attr.data-index]="i" > 
-        <marker id="{{i}}" 
+        <marker id="{{'marker-'+i}}" 
             position="loc: {{marker.lat}} , {{marker.lng}}" 
             draggable="true" 
             (click)="clicked($event, i)"
@@ -17,16 +20,15 @@
             (dragend)="markerClicked($event, 'dragend', i)" 
             (mouseover)="highlight($event, i)"
             (mouseout)="highlight($event, i)"
-
             >
         <!--(positionChanged)="markerClicked($event, 'changed', i)" (cursorChanged)="markerClicked($event, 'changed', i)"-->
         </marker>
-          <info-window id="iw">
+          <!--<info-window id="{{'iw-'+i}}">
             <div *ngIf="marker.display">
                 lat: {{ marker.lat }}, lng: {{ marker.lng }}
             </div>
             <button (click)="hideMarkerInfo($event)">Hide Info</button>
-        </info-window>
+        </info-window>-->
     </div>
 </ngui-map>
     </mat-grid-tile>
