--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,41 +1,4 @@
-<mat-toolbar color="primary">
-  <span>AR Maps Editor</span>
-</mat-toolbar>  
-
-<mat-toolbar color="primary">
-  <button mat-icon-button [matMenuTriggerFor]="menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-  <span>Menu</span>
-
-  <mat-menu #menu="matMenu">
-
-    <button mat-menu-item disabled routerLink="/">
-      <mat-icon >home</mat-icon>
-      <span>Home</span>
-    </button>
-    
-    <button mat-menu-item routerLink="/create">
-      <mat-icon>add</mat-icon>
-      <span>Create New Map</span>
-    </button>
-
-
-    <button mat-menu-item [matMenuTriggerFor]="myMaps"> 
-      <mat-icon>directions</mat-icon>
-      <span> My Maps </span>
-    </button>
-
-         
-
-      <mat-menu #myMaps="matMenu">
-        <button mat-menu-item>Map 1</button>
-        <button mat-menu-item>Map 2</button>
-        <button mat-menu-item>Map 3</button> 
-      </mat-menu>
-  </mat-menu>
-</mat-toolbar>
-
+<toolbar></toolbar>
 <mat-card class="example-card" flex>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
@@ -46,11 +9,11 @@
   <mat-card-content>
     </mat-card-content>
       
-      <div flex layout="row">
+      <!--<div flex layout="row">
          <mat-card-content style="border-color: darkgray" flex>
             <map></map>
          </mat-card-content>
-    </div>
+    </div>-->
 
   <mat-card-actions>
     <button mat-button>LIKE</button>
