--- a/src/app/poi-list/poi-list.component.html
+++ b/src/app/poi-list/poi-list.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="markers?.length > 0">
+<div   *ngIf="markers?.length > 0" style="overflow:scroll;">
 <mat-list dense flex class="poi-list">
     <div *ngFor="let marker of markers let i = index" [attr.data-index]="i" >
-        <mat-list-item  [ngClass]="{'active': isActive(i)}" class="mat-2-line fill-box" layout="row"> 
+        <!--<mat-list-item  [ngClass]="{'active': isActive(i)}" class="mat-2-line" layout="row"> 
                 <div (mouseover)="highlight(i)" class="mat-list-item-text">
                     <p matLine class="label">
                         {{marker.label}}
@@ -11,9 +11,32 @@
                     </p>
                 </div>
                 <span flex></span>           
-                <button flex=5 class="edit-button" mat-icon-button style="opacity:1;"tabindex="-1" (click)="editLabel($event, i)">edit</button>
+                <button flex=5 class="edit-button" 
+                    mat-icon-button (click)="editLabel($event, i)">edit</button>
 
-        </mat-list-item>
+        </mat-list-item>-->
+
+        <mat-grid-list cols="4" rowHeight="35px" [ngClass]="{'active': isActive(i)}">
+            <div (mouseover)="highlight(i)" >
+                <mat-grid-tile [colspan]="3" [rowspan]="1" class="label poi-row">
+                    {{marker.label}}
+                </mat-grid-tile>
+
+                <mat-grid-tile [colspan]="1" [rowspan]="2">        
+                    <button flex=5 class="edit-button" 
+                        mat-icon-button (click)="editLabel($event, i)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="3" [rowspan]="1" class="poi-row">
+                    {{marker.lat}}
+                    <br> {{marker.lng}}
+                </mat-grid-tile>
+            
+
+            </div>
+        </mat-grid-list>
+        <div style="height: 3px;"></div>
         <mat-divider></mat-divider>
     </div>
 
