--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,19 +1,16 @@
-<toolbar></toolbar>
-
 <mat-card class="example-card" flex>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Settings</mat-card-title>
+    <mat-card-title>Maps</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
+  <mat-card-content>
+    </mat-card-content>
+      
       <div flex layout="row">
-        <h1> settings placeholder </h1>
-      </div>  
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
+         <mat-card-content style="border-color: darkgray" flex>
+            <h2> Welcome. Please select a map to edit </h2>
+         </mat-card-content>
+    </div>
 </mat-card>
