--- a/src/app/components/poi-list/poi-list.component.css
+++ b/src/app/components/poi-list/poi-list.component.css
@@ -5,7 +5,9 @@
 .edit-button {
     float: right;
 }
-
+.browse-button {
+    float: right;
+}
 .highlight {
     background-color: lightgoldenrodyellow;
 }
