--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="mat-typography">
 <toolbar></toolbar>
 <router-outlet></router-outlet>
+</div>
