--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,16 +1,22 @@
 <mat-card class="example-card" flex>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Maps</mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
   </mat-card-header>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
   <mat-card-content>
     </mat-card-content>
-      
-      <div flex layout="row">
-         <mat-card-content style="border-color: darkgray" flex>
-            <h2> Welcome. Please select a map to edit </h2>
-         </mat-card-content>
-    </div>
+    <div *ngIf="!loggedIn">
+        <div flex layout="row">
+          <mat-card-content style="border-color: darkgray" flex>
+              <h2 style="width: 50%;"> Please log in</h2>
+          </mat-card-content>
+        </div>
+      </div>
+      <div *ngIf="loggedIn">
+        <div flex layout="row">
+          <mat-card-content style="border-color: darkgray" flex>
+              <h2> Welcome. Please select a map to edit </h2>
+          </mat-card-content>
+        </div>
+      </div>
 </mat-card>
