--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -12,7 +12,7 @@
         (mapReady$)="onMapReady($event)">
     <div *ngFor="let marker of currentMap.markers; let i = index" [attr.data-index]="i" > 
         <marker id="{{'marker-'+i}}" 
-            position="loc: {{marker.lat}} , {{marker.lng}}" 
+            position="location:{{marker.lat}} , {{marker.lng}}" 
             draggable="true" 
             (click)="markerClicked($event, i)"
             (dragstart)="markerDragged($event, 'dragstart', i)" 
