--- a/src/app/components/toolbar/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar/toolbar.component.html
@@ -3,7 +3,16 @@
   <span>AR Maps Editor</span>
   <span class="fill-toolbar"></span>
   <span>
-  <button mat-raised-button color="primary" routerLink="/settings"> My Account </button>
+  <!-- <button mat-raised-button color="primary" routerLink="/settings"> My Account </button> -->
+  <div *ngIf="!userLoggedIn()">
+    <button mat-raised-button color="primary" (click)="login($event)"> Login </button>
+    <button mat-raised-button color="primary" (click)="register($event)"> Register </button>
+  </div>  
+  <div *ngIf="userLoggedIn()">
+    <button mat-raised-button color="primary" routerLink="/settings"> My Account </button>
+    <button mat-raised-button color="primary" (click)="logout()"> Logout </button>
+
+  </div> 
   </span>
   </mat-toolbar-row>
 
@@ -19,7 +28,7 @@
         <mat-icon >home</mat-icon>
         <span>Home</span>
       </button>
-      
+      <div *ngIf="userLoggedIn()">
       <button mat-menu-item routerLink="/create" >
         <mat-icon>add</mat-icon>
         <span>Create New Map</span>
@@ -30,6 +39,7 @@
         <mat-icon>directions</mat-icon>
         <span> My Maps </span>
       </button>
+      </div>
 
         <mat-menu #myMaps="matMenu">
           <div *ngIf="maps?.length > 0">
@@ -41,5 +51,6 @@
           </div>
         </mat-menu>
     </mat-menu>
+
   </mat-toolbar-row>
 </mat-toolbar>
