Added logout and map refresh for toolbar

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -7,10 +7,9 @@
   <mat-card-content>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
       <div flex layout="row">
-        <h1> settings page</h1>
-        
-        <div style="font-size: 4px">seth sucks dick</div>
-        <div style="font-size: 2px">this is how far you have to zoom in to see seth's penis</div>
+      User : {{user.email}}
+      <br>
+      
       </div>  
   </mat-card-content>
   <mat-card-actions>
