--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -8,7 +8,10 @@
     <div *ngIf="!loggedIn">
         <div flex layout="row">
           <mat-card-content style="border-color: darkgray" flex>
-              <h2 style="width: 50%;"> Please log in</h2>
+              <h2 style="width: 50%;">Welcome to AR Maps Editor. Please Login.</h2>
+              <mat-grid-list cols="1" rowHeight="1:2">
+                
+                </mat-grid-list>
           </mat-card-content>
         </div>
       </div>
