--- a/src/app/components/register-dialog/register-dialog.component.html
+++ b/src/app/components/register-dialog/register-dialog.component.html
@@ -5,24 +5,42 @@
             <input matInput style="align:middle; width: 200px" [(ngModel)]="email" placeholder="Email"> 
         </mat-form-field>
         <div *ngIf="password != passwordRepeat && (password && password.length > 0); then invalidPassword; else validPassword"></div>  
-        <ng-template #invalidPassword class="mat-typography"><br><div style="color: red;">Passwords do not match.</div><br></ng-template>
-        <ng-template #validPassword><br></ng-template>
+        <ng-template #invalidPassword class="mat-typography">
+            <br>
+            <div style="color: red;">Passwords do not match.</div>
+            <br>
+        </ng-template>
+        <ng-template #validPassword>
+            <br>
+        </ng-template>
+
+
         <!-- <div *ngIf="password === passwordRepeat">
             <br>
         </div> -->
+        <!-- <div>Password must be 8 characters or more. </div> -->
+            <br>
         <mat-form-field>
             <input matInput  type="password" [(ngModel)]="password" placeholder="Password"> 
         </mat-form-field>
         <br>
         <mat-form-field>
+            
             <input matInput type="password"  [(ngModel)]="passwordRepeat" placeholder="Repeat Password"> 
         </mat-form-field>
 <mat-dialog-content></mat-dialog-content>
 <mat-dialog-actions>
-  <div *ngIf="password === passwordRepeat && email">
-    <button mat-button [mat-dialog-close]="([email, password, passwordRepeat])">Register</button>
-  </div>
-    <button mat-button [mat-dialog-close]="true">Cancel</button>
+        <!-- <div *ngIf="password.length > 0 && password.length < 8" style="color: red;">
+            <div>
+                Password must be 8 characters or more.
+            </div> -->
+        <!-- </div> -->
+        <div *ngIf="password === passwordRepeat && email">
+                <button mat-button [mat-dialog-close]="([email, password, passwordRepeat])">Register</button>
+        </div>
+        <button mat-button [mat-dialog-close]="true">Cancel</button>
+
+
 
 </mat-dialog-actions>
 <!--</div>-->
