--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -1,5 +1,5 @@
 <!--<div class="mat-dialog-container">-->
-    <h2 mat-dialog-title>Register</h2>
+    <h2 mat-dialog-title>Login</h2>
 
     <mat-form-field>
         <input matInput style="float :middle; width: 200px" [(ngModel)]="email" placeholder="Email"> 
