--- a/src/app/components/create/create/create.component.html
+++ b/src/app/components/create/create/create.component.html
@@ -9,8 +9,13 @@
         </mat-card-title>
             <mat-form-field *ngIf="titleEditable">
                 <input #mapName matInput (keyup.enter)="changeTitle(mapName.value)" placeholder="Map Name"> 
-        </mat-form-field>    
-      <mat-card-subtitle></mat-card-subtitle>
+        </mat-form-field> 
+
+      <mat-card-subtitle>
+
+      </mat-card-subtitle><br>
+      <mat-slide-toggle>Public</mat-slide-toggle>
+
   </mat-card-header>
   <mat-card-content>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
