--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,14 +1,16 @@
 <mat-card class="example-card" flex>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Settings</mat-card-title>
+    <mat-card-title style="font-size: 24px" >Settings</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
-      <div flex layout="row">
-      User : {{user.email}}
-      <br>
+      <div flex layout="row" style="font-size: 24px">
+          <br>
+
+
+        Email: {{user.email}}
       
       </div>  
   </mat-card-content>
