--- a/src/app/components/register-dialog/register-dialog.component.html
+++ b/src/app/components/register-dialog/register-dialog.component.html
@@ -1,6 +1,8 @@
 <!--<div class="mat-dialog-container">-->
 <h2 mat-dialog-title>Register</h2>
-
+        <mat-form-field>
+            <input matInput style="align:middle; width: 200px" [(ngModel)]="nickname" placeholder="Company"> 
+        </mat-form-field>
         <mat-form-field>
             <input matInput style="align:middle; width: 200px" [(ngModel)]="email" placeholder="Email"> 
         </mat-form-field>
@@ -35,8 +37,8 @@
                 Password must be 8 characters or more.
             </div> -->
         <!-- </div> -->
-        <div *ngIf="password === passwordRepeat && email">
-                <button mat-button [mat-dialog-close]="([email, password, passwordRepeat])">Register</button>
+        <div *ngIf="password === passwordRepeat && email && nickname">
+                <button mat-button [mat-dialog-close]="([nickname, email, password, passwordRepeat])">Register</button>
         </div>
         <button mat-button [mat-dialog-close]="true">Cancel</button>
 
