--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -6,14 +6,19 @@
   </mat-card-header>
   <mat-card-content>
   <!--<img mat-card-image src="https://loiane.com/images/tags/angular.svg" height="300px">-->
-      <div flex layout="row" style="font-size: 24px">
-          <br>
-
-
-        Email: {{user.email}}
-      
-      </div>  
-  </mat-card-content>
+        <mat-grid-list cols="1" rowHeight="30px">
+          <mat-grid-tile>
+            <h2>
+              Email: {{user.email}}
+              </h2> 
+          </mat-grid-tile>
+          <mat-grid-tile>
+              <h2>
+              Nickname: {{user.nickname}}
+            </h2>
+          </mat-grid-tile>
+        </mat-grid-list>
+        </mat-card-content>
   <mat-card-actions>
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
